<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simplenote</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="tag_hint">Add tag&#8230;</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="info">Info</string>
    <string name="delete">Delete note</string>
    <string name="undelete">Restore note</string>
    <string name="new_note">New Note</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="show_dates">Show dates</string>
    <string name="detect_links">Detect links</string>
    <string name="font_size">Font size</string>
    <string name="normal">Normal</string>
    <string name="preview_lines">Preview lines</string>
    <string name="share_note">Share Note</string>
    <string name="words">Words</string>
    <string name="characters">Characters</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete tag</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_trash">Empty trash</string>
    <string name="confirm_empty_trash">Are you sure you want to empty the trash?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="character">Character</string>
    <string name="word">Word</string>
    <string name="note_info">Note Info</string>
    
    <string name="sort_order">Sort order</string>
    <string name="modified_date">Modified date</string>
    <string name="search">Search</string>
    
    <string name="notes">All Notes</string>
    <string name="trash">Trash</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <!-- Undo -->
    <string name="undo">Undo</string>
    <string name="note_deleted">Note moved to the trash.</string>

    
    <!-- in-app billing -->
	<string name="btn_buy">Buy</string>
    <string name="premium_title">Go premium!</string>
    <string name="premium_subtitle">Become a Premium subscriber to get rid of ads and gain more features</string>
    <string name="premium_link_title">Tell me more about Premium</string>
    <string name="premium_link_url">http://simplenote.com/premium/</string>
    <string name="premium_add">Add 12 Months</string>
    <string name="premium_price">$19.99 US</string>
    <string name="billing_err_subscription_not_supported">Sorry, subscriptions are not supported on your device yet.</string>
    <string name="billing_err_setup_failed">Sorry, there was a problem setting up in-app purchasing (%s)</string>
	<string name="billing_err_query_inventory_failed">Sorry, there was a problem querying in-app purchasing (%s)</string>
	<string name="billing_err_purchasing">Sorry, there was a problem purchasing a subscription (%s)</string>
	<string name="billing_err_payload_verification_failed">Unable to verify subscription purchase</string>
	<string name="billing_toast_purchase_success">Thank you for subscribing to Simplenote!</string>
    <string name="no_notes_newline"><b>No notes here.</b>\nWhy not create one?</string>
    <string name="no_notes"><![CDATA[<b>No notes here.</b><br>Why not create one?]]></string>
    <string name="no_tags_found">No tags found.</string>
    <string name="trash_is_empty"><![CDATA[<b>The trash is empty.</b>]]></string>
</resources>