<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ab_icon_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/search" />
    <item
        android:id="@+id/menu_create_note"
        android:icon="@drawable/ab_icon_new"
        android:showAsAction="always"
        android:title="@string/new_note"/>
    <item
        android:id="@+id/menu_preferences"
        android:showAsAction="never"
        android:title="@string/preferences"/>

    <item
            android:id="@+id/menu_share"
            android:showAsAction="ifRoom"
            android:title="@string/share"
            android:icon="@drawable/ab_icon_share"/>
    <item
            android:id="@+id/menu_delete"
            android:icon="@drawable/ab_icon_trash"
            android:showAsAction="ifRoom"
            android:title="@string/delete"/>

</menu>