<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_medium" >

    <TextView
        android:id="@+id/text_premium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="@color/lightgrey"
        android:shadowDx="1.0"
        android:shadowDy="1.0"
        android:shadowRadius="1"
        android:text="@string/premium_title"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/holo_blue_dark"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/padding_extra_large"
        android:src="@color/holo_blue_light" />

    <RelativeLayout
        android:id="@+id/layout_buy"
        android:background="@color/white"
        android:padding="@dimen/padding_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/button_buy"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_premium_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_add"
                android:textAppearance="@style/SimplenoteTextAppearance"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_premium_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_price"
                android:textAppearance="@style/SimplenoteTextAppearance"
                android:textColor="@color/grey" />
        </LinearLayout>

        <Button
            android:id="@+id/button_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/btn_buy" />
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="@dimen/padding_extra_large"
        android:src="@color/holo_blue_light" />

    <TextView
        android:id="@+id/text_premium_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/premium_subtitle"
        android:textAppearance="@style/SimplenoteTextAppearance"
        android:textColor="@color/grey" />

    <TextView
        android:id="@+id/text_premium_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_extra_large"
        android:text="@string/premium_link_title"
        android:textAppearance="@style/SimplenoteTextAppearance" />

</LinearLayout>